<resources>
    <string name="app_name">Draw Art</string>
    <string name="app_admob_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="facebook_app_id" translatable="false">123456789012345</string>
    <string name="facebook_client_token" translatable="false">fake_client_token_123456</string>


    <!--    translate-->
    <string name="msg_home">Home</string>
    <string name="msg_project">Project</string>
    <string name="msg_level">Level:</string>
    <string name="msg_number_frame">%d frames</string>
    <string name="msg_project_name">Project name</string>
    <string name="msg_enter_the_name">Enter the name of your animation</string>
    <string name="msg_format">Format</string>
    <string name="msg_size">Size</string>
    <string name="msg_frame_per_second">Frame per Second</string>
    <string name="msg_background">Background</string>
    <string name="msg_backgrounds">Backgrounds</string>
    <string name="msg_create_now">Create Now</string>
    <string name="msg_paper">Paper</string>
    <string name="msg_pattern">Pattern</string>
    <string name="msg_scenes">Scenes</string>
    <string name="msg_select_fps">Currently you would need to draw 12 frames to make 1 second</string>
    <string name="msg_frames">Frames:</string>
    <string name="msg_mode">Mode</string>
    <string name="msg_use_template">Use\nTemplate</string>
    <string name="msg_draw_according">Draw According\nTemplate</string>
    <string name="msg_continue">Continue</string>
    <string name="msg_make_video">Make Video</string>
    <string name="msg_movie">Movie</string>
    <string name="msg_title_home">Draw Animation</string>
    <string name="msg_colors">Colors</string>
    <string name="msg_apply">Apply</string>
    <string name="msg_create_project">Create Project</string>
    <string name="msg_preview">Preview</string>
</resources>