<?xml version="1.0" encoding="utf-8"?>
<com.leansoft.draw.drawart.widget.SafeAreaView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/layout_header_2" />

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

        <TextView
            style="@style/BodyNormalM1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_project_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edt_create_project"
            android:fontFamily="@font/inter_italic"
            android:hint="@string/msg_enter_the_name"
            android:paddingVertical="16dp"
            android:paddingStart="16dp"
            android:textColor="@color/neutral_500"
            android:textSize="12sp" />

        <TextView
            style="@style/BodyNormalM1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/msg_format" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv1"
        style="@style/BodySmallM1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingVertical="6dp"
        android:text="@string/msg_size"
        app:layout_constraintStart_toStartOf="@+id/ln1"
        app:layout_constraintTop_toBottomOf="@+id/ln1" />

    <LinearLayout
        android:id="@+id/lnSize"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:background="@drawable/bg_neutral_100_radius_4"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="5.5dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv1"
        app:layout_constraintEnd_toEndOf="@+id/ln1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintTop_toTopOf="@+id/tv1">

        <TextView
            android:id="@+id/tvSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/neutral_950"
            android:textSize="14sp"
            tools:text="1:1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_drop" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv2"
        style="@style/BodySmallM1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingVertical="6dp"
        android:text="@string/msg_frame_per_second"
        app:layout_constraintStart_toStartOf="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <LinearLayout
        android:id="@+id/lnFramePerSecond"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:background="@drawable/bg_neutral_100_radius_4"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="5.5dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv2"
        app:layout_constraintEnd_toEndOf="@+id/ln1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv2"
        app:layout_constraintTop_toTopOf="@+id/tv2">

        <TextView
            android:id="@+id/tvSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/neutral_950"
            android:textSize="14sp"
            tools:text="12" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_drop" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvBg"
        style="@style/BodyNormalM1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/msg_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintDimensionRatio="372:200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBg"
        app:strokeColor="@color/neutral_200"
        app:strokeWidth="1.5dp">
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</com.leansoft.draw.drawart.widget.SafeAreaView>